--- a/hybrid-homework/mobile/package.json
+++ b/hybrid-homework/mobile/package.json
@@ -30,7 +30,10 @@
     "react-native-safe-area-context": "4.10.5",
     "react-native-screens": "3.31.1",
     "react-native-web": "~0.19.10",
-    "react-native-webview": "13.8.6"
+    "react-native-webview": "13.8.6",
+    "expo-constants": "~16.0.2",
+    "expo-device": "~6.0.2",
+    "expo-location": "~17.0.1"
   },
   "devDependencies": {
     "@babel/core": "^7.20.0",
