--- a/hybrid-homework/web/package.json
+++ b/hybrid-homework/web/package.json
@@ -17,7 +17,8 @@
     "react-hook-form": "^7.53.2",
     "react-kakao-maps-sdk": "^1.1.27",
     "swiper": "^11.1.15",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
