--- a/HYBRID-H.W/web/package.json
+++ b/HYBRID-H.W/web/package.json
@@ -9,7 +9,11 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.5",
+    "@emotion/styled": "^11.13.5",
     "@hookform/resolvers": "^3.9.1",
+    "@mui/icons-material": "^6.1.9",
+    "@mui/material": "^6.1.9",
     "@radix-ui/react-label": "^2.1.0",
     "@radix-ui/react-slot": "^1.1.0",
     "class-variance-authority": "^0.7.1",
