--- a/03-hybrid/project/web/package.json
+++ b/03-hybrid/project/web/package.json
@@ -22,7 +22,8 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.2",
     "swiper": "^11.1.15",
-    "zod": "^3.23.8"
+    "zod": "^3.23.8",
+    "zustand": "^5.0.1"
   },
   "devDependencies": {
     "@types/node": "^20",
