--- a/hybrid-homework/web/package.json
+++ b/hybrid-homework/web/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@hookform/resolvers": "^3.9.1",
+    "antd": "^5.22.4",
     "msw": "^2.6.6",
     "next": "14.2.16",
     "react": "^18",
