--- a/hybrid-homework/web/package.json
+++ b/hybrid-homework/web/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@apollo/client": "^3.12.2",
     "@hookform/resolvers": "^3.9.1",
     "antd": "^5.22.4",
+    "apollo-upload-client": "^18.0.1",
+    "graphql": "^16.9.0",
+    "graphql-request": "^7.1.2",
     "msw": "^2.6.6",
     "next": "14.2.16",
     "react": "^18",
@@ -22,6 +26,8 @@
     "zustand": "^5.0.2"
   },
   "devDependencies": {
+    "@graphql-codegen/cli": "^5.0.3",
+    "@types/apollo-upload-client": "^18.0.0",
     "@types/node": "^20",
     "@types/react": "^18",
     "@types/react-dom": "^18",
@@ -29,6 +35,6 @@
     "eslint-config-next": "14.2.16",
     "postcss": "^8",
     "tailwindcss": "^3.4.1",
-    "typescript": "^5"
+    "typescript": "^5.7.2"
   }
 }
