--- a/hybrid/web/package.json
+++ b/hybrid/web/package.json
@@ -9,8 +9,10 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "antd": "^5.22.4",
     "next": "14.2.16",
     "react": "^18",
+    "react-daum-postcode": "^3.1.3",
     "react-dom": "^18",
     "react-kakao-maps-sdk": "^1.1.27",
     "swiper": "^11.1.15"
